Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL)
-
None
-
5.5.59
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos6-x86/builds/5872/steps/mtr/logs/stdio
wsrep.variables w2 [ fail ]
|
Test ended at 2017-11-07 14:47:54
|
|
|
CURRENT_TEST: wsrep.variables
|
--- /usr/share/mysql-test/suite/wsrep/r/variables.result 2017-11-07 13:07:43.000000000 +0200
|
+++ /dev/shm/var/2/log/variables.reject 2017-11-07 14:47:54.629938810 +0200
|
@@ -206,7 +206,7 @@
|
Threads_connected 1
|
SHOW STATUS LIKE 'wsrep_thread_count';
|
Variable_name Value
|
-wsrep_thread_count 11
|
+wsrep_thread_count 12
|
#
|
# MDEV#6411: Setting set @@global.wsrep_sst_auth=NULL causes crash
|
#
|
|
|
mysqltest: Result content mismatch
|
|
Test sequence |
worker[2] > Restart [mysqld.1 - pid: 5724, winpid: 5724] - running with different options '' != '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual'
|
rpl.rpl_test_framework 'stmt' w1 [ pass ] 11705
|
worker[1] > Restart [mysqld.1 - pid: 5221, winpid: 5221] - using different config file
|
worker[1] > Restart [mysqld.2 - pid: 5223, winpid: 5223] - using different config file
|
worker[1] > Restart [mysqld.3 - pid: 5225, winpid: 5225] - using different config file
|
worker[1] > Restart [mysqld.4 - pid: 5227, winpid: 5227] - using different config file
|
worker[1] > Restart [mysqld.5 - pid: 5229, winpid: 5229] - using different config file
|
worker[1] > Restart [mysqld.6 - pid: 5234, winpid: 5234] - using different config file
|
worker[1] > Restart [mysqld.7 - pid: 5277, winpid: 5277] - using different config file
|
worker[1] > Restart [mysqld.8 - pid: 5287, winpid: 5287] - using different config file
|
worker[1] > Restart [mysqld.9 - pid: 5304, winpid: 5304] - using different config file
|
wsrep.mysql_tzinfo_to_sql_symlink w2 [ pass ] 86
|
wsrep.plugin w2 [ pass ] 3
|
wsrep.mdev_6832 w4 [ pass ] 4121
|
rpl.rpl_heartbeat_basic 'mix' w3 [ pass ] 57381
|
worker[3] > Restart [mysqld.1 - pid: 5092, winpid: 5092] - using different config file
|
worker[3] > Restart [mysqld.2 - pid: 3295, winpid: 3295] - using different config file
|
wsrep.wsrep_rpl 'innodb,mix' w1 [ pass ] 903
|
worker[1] > Restart [mysqld.1 - pid: 5912, winpid: 5912] - running with different options '--binlog-format=statement --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --log-bin=master-bin' != '--binlog-format=mixed --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --log-bin=master-bin'
|
worker[1] > Restart [mysqld.2 - pid: 5914, winpid: 5914] - running with different options '--binlog-format=statement --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --log-bin=slave-bin' != '--binlog-format=mixed --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --log-bin=slave-bin'
|
wsrep.wsrep_rpl 'innodb,row' w3 [ pass ] 898
|
worker[3] > Restart [mysqld.1 - pid: 6016, winpid: 6016] - using different config file
|
worker[3] > Restart [mysqld.2 - pid: 6022, winpid: 6022] - using different config file
|
wsrep.mdev_7798 w4 [ pass ] 3838
|
worker[4] > Restart [mysqld.1 - pid: 6178, winpid: 6178] - using different config file
|
wsrep.wsrep_rpl 'innodb,stmt' w1 [ pass ] 894
|
worker[1] > Restart [mysqld.1 - pid: 6102, winpid: 6102] - using different config file
|
worker[1] > Restart [mysqld.2 - pid: 6108, winpid: 6108] - using different config file
|
maria.small_blocksize w1 [ pass ] 38
|
worker[1] > Restart [mysqld.1 - pid: 6248, winpid: 6248] - running with different options '--innodb-undo-tablespaces=0 --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --plugin-load-add=example_key_management.so --loose-example-key-management --aria-encrypt-tables --encrypt-tmp-disk-tables --innodb-encrypt-tables --innodb-encrypt-log --innodb-encryption-rotate-key-age=15 --innodb-encryption-threads=4 --innodb-tablespaces-encryption' != '--aria-block-size=1024'
|
main.connect w3 [ pass ] 10176
|
worker[3] > Restart [mysqld.1 - pid: 6218, winpid: 6218] - using different config file
|
main.pool_of_threads w4 [ pass ] 11694
|
worker[4] > Restart [mysqld.1 - pid: 6250, winpid: 6250] - using different config file
|
encryption.innodb_encryption 'innodb,undo0' w1 [ pass ] 9508
|
worker[1] > Restart [mysqld.1 - pid: 6431, winpid: 6431] - running with different options '--auto-increment-increment=1 --loose-thread-pool-size=4' != '--innodb-undo-tablespaces=0 --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --plugin-load-add=example_key_management.so --loose-example-key-management --aria-encrypt-tables --encrypt-tmp-disk-tables --innodb-encrypt-tables --innodb-encrypt-log --innodb-encryption-rotate-key-age=15 --innodb-encryption-threads=4 --innodb-tablespaces-encryption'
|
sys_vars.sysvars_server_embedded '32bit' w1 [ skipped ] Test requires: embedded server
|
encryption.innodb_encryption-page-compression 'innodb' w4 [ pass ] 2415
|
sys_vars.sysvars_server_notembedded '32bit' w1 [ pass ] 43
|
worker[1] > Restart [mysqld.1 - pid: 6535, winpid: 6535] - running with different options '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --autocommit=0' != '--auto-increment-increment=1 --loose-thread-pool-size=4'
|
sys_vars.autocommit_func3 'innodb' w1 [ pass ] 13
|
worker[1] > Restart [mysqld.1 - pid: 6569, winpid: 6569] - running with different options '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --autocommit=1' != '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --autocommit=0'
|
sys_vars.autocommit_func2 'innodb' w1 [ pass ] 9
|
worker[1] > Restart [mysqld.1 - pid: 6609, winpid: 6609] - running with different options '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --autocommit=off' != '--innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --autocommit=1'
|
wsrep.variables w2 [ fail ]
|
Test ended at 2017-11-07 14:47:54
|