MDEV-14311 wsrep.variables fails in buildbot with wrong result

Removal of older code around wsrep_prev_slave_threads in
 wsrep_slave_count_change_update.

 Patch Credit:- Seppo